fix aboutMe page: event date wrapping when little space

--- a/src/app/aboutme/timed-event/timed-event.component.css
+++ b/src/app/aboutme/timed-event/timed-event.component.css
@@ -7,6 +7,7 @@
 .date {
   color: gray;
   margin: 0 20px;
+  white-space: nowrap;
 }
 
 .event-title {
